--- a/src/components/Title/title.scss
+++ b/src/components/Title/title.scss
@@ -1,4 +1,6 @@
 .app-title {
-  font: 100px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 10rem;
   text-align: center;
+  font-style: italic;
+  font-weight: 400;
 }
