--- a/src/components/TodoItem/todoItem.scss
+++ b/src/components/TodoItem/todoItem.scss
@@ -2,7 +2,9 @@
   align-items: center;
   background:white;
   border-radius: 5px;
+  box-shadow: 0 0 1px #ccc;
   display: flex;
   font-size: 1.5rem;
   height: 48px;
+  padding: 1rem;
 }
