--- a/src/components/Input/input.scss
+++ b/src/components/Input/input.scss
@@ -7,9 +7,11 @@
   height: 4em;
   max-width: 100%;
   width: 60em;
+  padding: 1rem;
   
   &::placeholder {
     color: gray;
     font-size: 1rem;
+    font-style: italic;
   }
 }
