adding new styles

--- a/src/components/TodoItem/components/editableLabel.scss
+++ b/src/components/TodoItem/components/editableLabel.scss
@@ -1,3 +1,10 @@
 .editable-label {
   width: 100%;
+
+  &-disable {
+    color: gray;
+    cursor: default;
+    pointer-events: none;
+    text-decoration: line-through;
+  }
 }
