--- a/src/components/TodoItem/components/closeButton.scss
+++ b/src/components/TodoItem/components/closeButton.scss
@@ -2,6 +2,7 @@
   border-radius: 50px;
   background: transparent;
   border-style: none;
+  cursor: pointer;
   height: 24px;
   max-width: 24px;
   width: 100%;
