--- a/src/components/TodoItem/components/toggleButton.scss
+++ b/src/components/TodoItem/components/toggleButton.scss
@@ -2,6 +2,7 @@
   border-radius: 50px;
   background: transparent;
   border: 1px solid;
+  cursor: pointer;
   height: 24px;
   margin-right: 1rem;
   width: 24px;
