--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,6 +1,6 @@
-.todoitem {
-  align-items: center;
-  background:white;
+.footer {
+  align-items: space-between;
+  background-color:white;
   border-radius: 5px;
   box-shadow: 0 0 1px #ccc;
   display: flex;
